--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -778,6 +778,14 @@ video {
   bottom: 14rem;
 }
 
+.bottom-\[-1px\] {
+  bottom: -1px;
+}
+
+.bottom-\[-85px\] {
+  bottom: -85px;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -786,8 +794,16 @@ video {
   left: 1.25rem;
 }
 
+.left-\[50\%\] {
+  left: 50%;
+}
+
 .right-0 {
   right: 0px;
+}
+
+.right-\[-1px\] {
+  right: -1px;
 }
 
 .top-0 {
@@ -804,14 +820,6 @@ video {
 
 .top-full {
   top: 100%;
-}
-
-.bottom-\[-1px\] {
-  bottom: -1px;
-}
-
-.right-\[-1px\] {
-  right: -1px;
 }
 
 .-z-10 {
@@ -836,6 +844,18 @@ video {
 
 .z-40 {
   z-index: 40;
+}
+
+.z-\[11\] {
+  z-index: 11;
+}
+
+.z-\[2\] {
+  z-index: 2;
+}
+
+.z-\[3\] {
+  z-index: 3;
 }
 
 .col-start-1 {
@@ -1064,20 +1084,64 @@ video {
   height: -webkit-fill-available;
 }
 
+.h-\[170px\] {
+  height: 170px;
+}
+
 .h-\[210px\] {
   height: 210px;
+}
+
+.h-\[27px\] {
+  height: 27px;
 }
 
 .h-\[300\] {
   height: 300;
 }
 
+.h-\[30px\] {
+  height: 30px;
+}
+
+.h-\[33px\] {
+  height: 33px;
+}
+
+.h-\[36px\] {
+  height: 36px;
+}
+
+.h-\[39px\] {
+  height: 39px;
+}
+
+.h-\[42px\] {
+  height: 42px;
+}
+
+.h-\[45px\] {
+  height: 45px;
+}
+
+.h-\[48px\] {
+  height: 48px;
+}
+
 .h-\[500px\] {
   height: 500px;
 }
 
+.h-\[50px\] {
+  height: 50px;
+}
+
 .h-\[60px\] {
   height: 60px;
+}
+
+.h-\[70px\] {
+  height: 70px;
 }
 
 .h-fit {
@@ -1092,6 +1156,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-\[24px\] {
+  height: 24px;
 }
 
 .w-10 {
@@ -1114,8 +1182,20 @@ video {
   width: 1rem;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
 .w-72 {
   width: 18rem;
+}
+
+.w-\[170px\] {
+  width: 170px;
+}
+
+.w-\[1px\] {
+  width: 1px;
 }
 
 .w-\[600vw\] {
@@ -1140,16 +1220,52 @@ video {
   width: 100%;
 }
 
-.w-5 {
-  width: 1.25rem;
-}
-
 .min-w-11 {
   min-width: 2.75rem;
 }
 
 .min-w-2 {
   min-width: 0.5rem;
+}
+
+.min-w-\[27px\] {
+  min-width: 27px;
+}
+
+.min-w-\[30px\] {
+  min-width: 30px;
+}
+
+.min-w-\[33px\] {
+  min-width: 33px;
+}
+
+.min-w-\[36px\] {
+  min-width: 36px;
+}
+
+.min-w-\[39px\] {
+  min-width: 39px;
+}
+
+.min-w-\[42px\] {
+  min-width: 42px;
+}
+
+.min-w-\[45px\] {
+  min-width: 45px;
+}
+
+.min-w-\[48px\] {
+  min-width: 48px;
+}
+
+.min-w-\[50px\] {
+  min-width: 50px;
+}
+
+.min-w-\[24px\] {
+  min-width: 24px;
 }
 
 .max-w-5 {
@@ -1168,12 +1284,20 @@ video {
   max-width: 24rem;
 }
 
+.max-w-\[130px\] {
+  max-width: 130px;
+}
+
 .max-w-\[190px\] {
   max-width: 190px;
 }
 
 .max-w-\[508px\] {
   max-width: 508px;
+}
+
+.max-w-\[50px\] {
+  max-width: 50px;
 }
 
 .max-w-\[60px\] {
@@ -1196,6 +1320,13 @@ video {
 
 .border-collapse {
   border-collapse: collapse;
+}
+
+.translate-x-\[-50\%\] {
+  --tw-translate-x: -50%;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+      -ms-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .translate-y-\[-50\%\] {
@@ -1264,6 +1395,10 @@ video {
           justify-content: space-between;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-10 {
   gap: 2.5rem;
 }
@@ -1282,10 +1417,6 @@ video {
 
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-0 {
-  gap: 0px;
 }
 
 .gap-x-2 {
@@ -1316,10 +1447,6 @@ video {
 
 .gap-y-8 {
   row-gap: 2rem;
-}
-
-.gap-y-5 {
-  row-gap: 1.25rem;
 }
 
 .overflow-hidden {
@@ -1356,6 +1483,14 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-xl {
@@ -1401,6 +1536,10 @@ video {
 
 .border-r {
   border-right-width: 1px;
+}
+
+.border-t {
+  border-top-width: 1px;
 }
 
 .border-dashed {
@@ -1454,13 +1593,13 @@ video {
   background-color: rgb(0 45 82 / var(--tw-bg-opacity));
 }
 
-.bg-transparent {
-  background-color: transparent;
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-whiteOp-200 {
+  background-color: #FFFFFF1A;
 }
 
 .bg-whiteOp-400 {
@@ -1468,8 +1607,12 @@ video {
   background-color: rgb(231 237 242 / var(--tw-bg-opacity));
 }
 
-.bg-whiteOp-200 {
-  background-color: #FFFFFF1A;
+.bg-\[url\(\'\.\.\/img\/index\/buy-bgd\.jpg\'\)\] {
+  background-image: url('../img/index/buy-bgd.jpg');
+}
+
+.bg-\[url\(\'\.\.\/img\/index\/buy-list-bg\.png\'\)\] {
+  background-image: url('../img/index/buy-list-bg.png');
 }
 
 .bg-\[url\(\'\.\.\/img\/index\/slide-bgd-1\.jpg\'\)\] {
@@ -1546,6 +1689,10 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .p-5 {
@@ -1638,6 +1785,14 @@ video {
   padding-bottom: 6rem;
 }
 
+.pb-28 {
+  padding-bottom: 7rem;
+}
+
+.pb-32 {
+  padding-bottom: 8rem;
+}
+
 .pb-5 {
   padding-bottom: 1.25rem;
 }
@@ -1706,6 +1861,10 @@ video {
 
 .text-\[30px\] {
   font-size: 30px;
+}
+
+.text-\[40px\] {
+  font-size: 40px;
 }
 
 .text-\[45px\] {
@@ -1798,10 +1957,6 @@ video {
   color: #FFFFFF33;
 }
 
-.text-whiteOp-200 {
-  color: #FFFFFF1A;
-}
-
 .opacity-0 {
   opacity: 0;
 }
@@ -1837,13 +1992,6 @@ video {
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.ring-0 {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  -webkit-box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-          box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 .transition-all {
@@ -1911,6 +2059,11 @@ video {
   height: 1px;
 }
 
+.before\:h-\[200px\]::before {
+  content: var(--tw-content);
+  height: 200px;
+}
+
 .before\:h-\[6px\]::before {
   content: var(--tw-content);
   height: 6px;
@@ -1919,6 +2072,11 @@ video {
 .before\:w-2::before {
   content: var(--tw-content);
   width: 0.5rem;
+}
+
+.before\:w-\[200px\]::before {
+  content: var(--tw-content);
+  width: 200px;
 }
 
 .before\:w-\[50px\]::before {
@@ -1965,10 +2123,21 @@ video {
   border-color: rgb(14 136 236 / var(--tw-border-opacity));
 }
 
+.before\:border-whiteOp-200::before {
+  content: var(--tw-content);
+  border-color: #FFFFFF1A;
+}
+
 .before\:bg-blue-400::before {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
   background-color: rgb(14 136 236 / var(--tw-bg-opacity));
+}
+
+.before\:bg-blue-600::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 45 82 / var(--tw-bg-opacity));
 }
 
 .before\:bg-transparent::before {
@@ -1987,10 +2156,57 @@ video {
   background-color: #FFFFFF33;
 }
 
-.before\:bg-blue-600::before {
+.before\:transition-all::before {
   content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 45 82 / var(--tw-bg-opacity));
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+}
+
+.after\:absolute::after {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.after\:left-\[50\%\]::after {
+  content: var(--tw-content);
+  left: 50%;
+}
+
+.after\:top-\[24px\]::after {
+  content: var(--tw-content);
+  top: 24px;
+}
+
+.after\:z-\[1\]::after {
+  content: var(--tw-content);
+  z-index: 1;
+}
+
+.after\:block::after {
+  content: var(--tw-content);
+  display: block;
+}
+
+.after\:h-\[50px\]::after {
+  content: var(--tw-content);
+  height: 50px;
+}
+
+.after\:w-\[1px\]::after {
+  content: var(--tw-content);
+  width: 1px;
+}
+
+.after\:translate-x-\[-50\%\]::after {
+  content: var(--tw-content);
+  --tw-translate-x: -50%;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+      -ms-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .after\:bg-blue-500::after {
@@ -1999,9 +2215,20 @@ video {
   background-color: rgb(10 74 127 / var(--tw-bg-opacity));
 }
 
+.after\:bg-whiteOp-400::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(231 237 242 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-blue-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(14 136 236 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(10 74 127 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-white:hover {
@@ -2021,6 +2248,12 @@ video {
 
 .hover\:opacity-75:hover {
   opacity: 0.75;
+}
+
+.before\:hover\:border-blue-500:hover::before {
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(10 74 127 / var(--tw-border-opacity));
 }
 
 .group:hover .group-hover\:from-blue-400 {
@@ -2060,6 +2293,10 @@ video {
 @media (min-width: 768px) {
   .md\:absolute {
     position: absolute;
+  }
+
+  .md\:bottom-\[-122px\] {
+    bottom: -122px;
   }
 
   .md\:left-0 {
@@ -2173,6 +2410,10 @@ video {
     height: 2rem;
   }
 
+  .md\:h-\[244px\] {
+    height: 244px;
+  }
+
   .md\:h-\[300px\] {
     height: 300px;
   }
@@ -2181,8 +2422,16 @@ video {
     height: 600px;
   }
 
+  .md\:h-\[66px\] {
+    height: 66px;
+  }
+
   .md\:h-full {
     height: 100%;
+  }
+
+  .md\:h-\[100px\] {
+    height: 100px;
   }
 
   .md\:w-14 {
@@ -2197,16 +2446,20 @@ video {
     width: 1.5rem;
   }
 
+  .md\:w-8 {
+    width: 2rem;
+  }
+
   .md\:w-\[100\%\] {
     width: 100%;
   }
 
-  .md\:w-full {
-    width: 100%;
+  .md\:w-\[244px\] {
+    width: 244px;
   }
 
-  .md\:w-8 {
-    width: 2rem;
+  .md\:w-full {
+    width: 100%;
   }
 
   .md\:max-w-56 {
@@ -2231,6 +2484,10 @@ video {
 
   .md\:max-w-\[416px\] {
     max-width: 416px;
+  }
+
+  .md\:max-w-\[66px\] {
+    max-width: 66px;
   }
 
   .md\:max-w-\[825px\] {
@@ -2293,6 +2550,10 @@ video {
     row-gap: 3rem;
   }
 
+  .md\:rounded-2xl {
+    border-radius: 1rem;
+  }
+
   .md\:border-b-0 {
     border-bottom-width: 0px;
   }
@@ -2309,20 +2570,20 @@ video {
     border-color: #FFFFFF33;
   }
 
-  .md\:p-3 {
-    padding: 0.75rem;
-  }
-
-  .md\:p-7 {
-    padding: 1.75rem;
-  }
-
   .md\:p-12 {
     padding: 3rem;
   }
 
+  .md\:p-3 {
+    padding: 0.75rem;
+  }
+
   .md\:p-6 {
     padding: 1.5rem;
+  }
+
+  .md\:p-7 {
+    padding: 1.75rem;
   }
 
   .md\:px-3 {
@@ -2352,6 +2613,10 @@ video {
 
   .md\:pb-24 {
     padding-bottom: 6rem;
+  }
+
+  .md\:pb-40 {
+    padding-bottom: 10rem;
   }
 
   .md\:pb-8 {
@@ -2447,14 +2712,40 @@ video {
     line-height: 1.25rem;
   }
 
+  .md\:leading-\[56px\] {
+    line-height: 56px;
+  }
+
   .md\:leading-tight {
     line-height: 1.25;
+  }
+
+  .md\:before\:h-\[284px\]::before {
+    content: var(--tw-content);
+    height: 284px;
+  }
+
+  .md\:before\:w-\[284px\]::before {
+    content: var(--tw-content);
+    width: 284px;
   }
 }
 
 @media (min-width: 1024px) {
   .lg\:absolute {
     position: absolute;
+  }
+
+  .lg\:bottom-auto {
+    bottom: auto;
+  }
+
+  .lg\:left-0 {
+    left: 0px;
+  }
+
+  .lg\:left-2\/4 {
+    left: 50%;
   }
 
   .lg\:left-\[1\%\] {
@@ -2467,10 +2758,6 @@ video {
 
   .lg\:left-\[23\%\] {
     left: 23%;
-  }
-
-  .lg\:left-\[45\%\] {
-    left: 45%;
   }
 
   .lg\:left-\[50\%\] {
@@ -2537,14 +2824,38 @@ video {
     margin-bottom: 2.5rem;
   }
 
+  .lg\:mb-12 {
+    margin-bottom: 3rem;
+  }
+
+  .lg\:mb-14 {
+    margin-bottom: 3.5rem;
+  }
+
   .lg\:mb-5 {
     margin-bottom: 1.25rem;
+  }
+
+  .lg\:mb-\[50px\] {
+    margin-bottom: 50px;
+  }
+
+  .lg\:mr-0 {
+    margin-right: 0px;
+  }
+
+  .lg\:block {
+    display: block;
   }
 
   .lg\:flex {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+
+  .lg\:grid {
+    display: grid;
   }
 
   .lg\:hidden {
@@ -2555,8 +2866,8 @@ video {
     height: 3rem;
   }
 
-  .lg\:h-\[600px\] {
-    height: 600px;
+  .lg\:h-\[450px\] {
+    height: 450px;
   }
 
   .lg\:w-\[125px\] {
@@ -2591,8 +2902,20 @@ video {
     max-width: 16rem;
   }
 
+  .lg\:max-w-\[300px\] {
+    max-width: 300px;
+  }
+
+  .lg\:max-w-\[375px\] {
+    max-width: 375px;
+  }
+
   .lg\:max-w-\[500px\] {
     max-width: 500px;
+  }
+
+  .lg\:max-w-\[526px\] {
+    max-width: 526px;
   }
 
   .lg\:max-w-\[752px\] {
@@ -2603,12 +2926,22 @@ video {
     max-width: 860px;
   }
 
-  .lg\:max-w-\[375px\] {
-    max-width: 375px;
+  .lg\:-translate-x-2\/4 {
+    --tw-translate-x: -50%;
+    -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+        -ms-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+            transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .lg\:translate-x-\[-50\%\] {
     --tw-translate-x: -50%;
+    -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+        -ms-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+            transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .lg\:translate-y-\[-50\%\] {
+    --tw-translate-y: -50%;
     -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
         -ms-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
             transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2620,6 +2953,10 @@ video {
 
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -2654,8 +2991,18 @@ video {
             align-items: center;
   }
 
+  .lg\:justify-between {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+
   .lg\:gap-4 {
     gap: 1rem;
+  }
+
+  .lg\:gap-5 {
+    gap: 1.25rem;
   }
 
   .lg\:gap-7 {
@@ -2676,6 +3023,10 @@ video {
     border-bottom-width: 1px;
   }
 
+  .lg\:border-t {
+    border-top-width: 1px;
+  }
+
   .lg\:border-none {
     border-style: none;
   }
@@ -2689,21 +3040,57 @@ video {
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   }
 
+  .lg\:bg-\[url\(\'\.\.\/img\/index\/buy-bg-desk\.png\'\)\] {
+    background-image: url('../img/index/buy-bg-desk.png');
+  }
+
   .lg\:from-80\% {
     --tw-gradient-from-position: 80%;
+  }
+
+  .lg\:bg-cover {
+    background-size: cover;
   }
 
   .lg\:p-0 {
     padding: 0px;
   }
 
-  .lg\:py-24 {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
+  .lg\:px-\[120px\] {
+    padding-left: 120px;
+    padding-right: 120px;
   }
 
   .lg\:pb-14 {
     padding-bottom: 3.5rem;
+  }
+
+  .lg\:pb-16 {
+    padding-bottom: 4rem;
+  }
+
+  .lg\:pb-\[50px\] {
+    padding-bottom: 50px;
+  }
+
+  .lg\:pt-0 {
+    padding-top: 0px;
+  }
+
+  .lg\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
+  .lg\:pt-24 {
+    padding-top: 6rem;
+  }
+
+  .lg\:pt-\[100px\] {
+    padding-top: 100px;
+  }
+
+  .lg\:text-left {
+    text-align: left;
   }
 
   .lg\:text-center {
