--- a/src/scss/blocks/_base.scss
+++ b/src/scss/blocks/_base.scss
@@ -9,6 +9,15 @@
     .block-bottom-point {
         @apply after:w-full after:h-full after:absolute after:rounded-md after:bg-blue-600 absolute w-4 h-4 bottom-0 right-0 bg-blue-500 box-content border-blue-500 border-[12px] rounded-tl-[10px] border-b-0 border-r-0;
     }
+    .career-select {
+        @apply border-t border-t-blue-700 last:border-b last:border-b-blue-700
+    }
+    .career-select-body {
+        @apply invisible pb-12 opacity-0 hidden group-[.active]:block group-[.active]:visible group-[.active]:opacity-100 group-[.active]:mt-7 transition-all [&_*]:text-white [&_*]:text-sm md:[&_*]:text-lg [&_*]:py-1 mt-8 [&_li]:before:w-[6px] md:[&_li]:before:w-[8px] [&_li]:before:h-[6px] md:[&_li]:before:h-[8px] [&_li]:before:min-w-[6px] md:[&_li]:before:min-w-[8px] [&_li]:before:mr-2 [&_li]:before:rounded-full [&_li]:before:bg-white [&_li]:before:block [&_li]:flex [&_li]:items-center
+    }
+    .white-button {
+        @apply w-fit px-5 md:px-8 py-4 block text-sm md:text-base bg-white rounded-xl text-center font-bold whitespace-nowrap text-blue-500 hover:text-white hover:bg-blue-400 transition-all md:m-0
+    }
 }
 
 .text-content blockquote,
