--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -953,6 +953,50 @@ video {
   top: 100%;
 }
 
+.-left-\[72px\] {
+  left: -72px;
+}
+
+.bottom-7 {
+  bottom: 1.75rem;
+}
+
+.-right-0 {
+  right: -0px;
+}
+
+.top-\[200px\] {
+  top: 200px;
+}
+
+.top-\[10px\] {
+  top: 10px;
+}
+
+.top-\[100px\] {
+  top: 100px;
+}
+
+.-right-\[45px\] {
+  right: -45px;
+}
+
+.top-\[300px\] {
+  top: 300px;
+}
+
+.-right-\[38px\] {
+  right: -38px;
+}
+
+.-left-\[38px\] {
+  left: -38px;
+}
+
+.bottom-\[200px\] {
+  bottom: 200px;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -1152,6 +1196,10 @@ video {
 
 .mt-auto {
   margin-top: auto;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .line-clamp-2 {
@@ -1369,6 +1417,18 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-\[76px\] {
+  width: 76px;
 }
 
 .min-w-11 {
@@ -2003,6 +2063,14 @@ video {
   padding-top: 1.25rem;
 }
 
+.pt-\[256px\] {
+  padding-top: 256px;
+}
+
+.pt-64 {
+  padding-top: 16rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -2446,6 +2514,14 @@ video {
     left: 0px;
   }
 
+  .md\:-left-\[140px\] {
+    left: -140px;
+  }
+
+  .md\:-right-\[140px\] {
+    right: -140px;
+  }
+
   .md\:m-0 {
     margin: 0px;
   }
@@ -2607,6 +2683,10 @@ video {
 
   .md\:w-full {
     width: 100%;
+  }
+
+  .md\:w-\[280px\] {
+    width: 280px;
   }
 
   .md\:max-w-56 {
