Fix discount page

--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -1701,6 +1701,10 @@ video {
   row-gap: 2rem;
 }
 
+.gap-y-5 {
+  row-gap: 1.25rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -2036,6 +2040,11 @@ video {
 .py-\[30px\] {
   padding-top: 30px;
   padding-bottom: 30px;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .pb-10 {
