fix discount single

--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -1833,6 +1833,14 @@ video {
   border-bottom-color: #FFFFFF33;
 }
 
+.border-b-white\/60 {
+  border-bottom-color: rgb(255 255 255 / 0.6);
+}
+
+.border-b-white\/20 {
+  border-bottom-color: rgb(255 255 255 / 0.2);
+}
+
 .bg-\[\#111111\] {
   --tw-bg-opacity: 1;
   background-color: rgb(17 17 17 / var(--tw-bg-opacity));
