--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -1000,16 +1000,16 @@ video {
   top: 0px;
 }
 
-.top-12 {
-  top: 3rem;
-}
-
 .top-\[200px\] {
   top: 200px;
 }
 
 .top-\[250px\] {
   top: 250px;
+}
+
+.top-\[47px\] {
+  top: 47px;
 }
 
 .top-\[50\%\] {
@@ -1354,10 +1354,6 @@ video {
   height: 50px;
 }
 
-.h-\[60px\] {
-  height: 60px;
-}
-
 .h-\[70px\] {
   height: 70px;
 }
@@ -1530,6 +1526,10 @@ video {
   max-width: 190px;
 }
 
+.max-w-\[379px\] {
+  max-width: 379px;
+}
+
 .max-w-\[508px\] {
   max-width: 508px;
 }
@@ -1548,6 +1548,10 @@ video {
 
 .max-w-\[900px\] {
   max-width: 900px;
+}
+
+.max-w-\[96px\] {
+  max-width: 96px;
 }
 
 .max-w-max {
@@ -1651,6 +1655,10 @@ video {
   gap: 2.5rem;
 }
 
+.gap-11 {
+  gap: 2.75rem;
+}
+
 .gap-14 {
   gap: 3.5rem;
 }
@@ -1669,10 +1677,6 @@ video {
 
 .gap-\[5px\] {
   gap: 5px;
-}
-
-.gap-11 {
-  gap: 2.75rem;
 }
 
 .gap-x-2 {
@@ -1697,16 +1701,16 @@ video {
   row-gap: 2.5rem;
 }
 
+.gap-y-5 {
+  row-gap: 1.25rem;
+}
+
 .gap-y-7 {
   row-gap: 1.75rem;
 }
 
 .gap-y-8 {
   row-gap: 2rem;
-}
-
-.gap-y-5 {
-  row-gap: 1.25rem;
 }
 
 .overflow-hidden {
@@ -1833,16 +1837,12 @@ video {
   border-color: #FFFFFF33;
 }
 
-.border-b-whiteOp-300 {
-  border-bottom-color: #FFFFFF33;
-}
-
-.border-b-white\/60 {
-  border-bottom-color: rgb(255 255 255 / 0.6);
-}
-
 .border-b-white\/20 {
   border-bottom-color: rgb(255 255 255 / 0.2);
+}
+
+.border-b-whiteOp-300 {
+  border-bottom-color: #FFFFFF33;
 }
 
 .bg-\[\#111111\] {
@@ -1947,12 +1947,12 @@ video {
   --tw-gradient-from-position: 60%;
 }
 
-.from-80\% {
-  --tw-gradient-from-position: 80%;
-}
-
 .from-70\% {
   --tw-gradient-from-position: 70%;
+}
+
+.from-80\% {
+  --tw-gradient-from-position: 80%;
 }
 
 .bg-cover {
@@ -2052,11 +2052,6 @@ video {
 .py-\[30px\] {
   padding-top: 30px;
   padding-bottom: 30px;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
 }
 
 .pb-10 {
@@ -2612,6 +2607,10 @@ video {
     margin-bottom: 3.5rem;
   }
 
+  .md\:mb-24 {
+    margin-bottom: 6rem;
+  }
+
   .md\:mb-28 {
     margin-bottom: 7rem;
   }
@@ -2670,10 +2669,6 @@ video {
 
   .md\:mt-\[410px\] {
     margin-top: 410px;
-  }
-
-  .md\:mb-24 {
-    margin-bottom: 6rem;
   }
 
   .md\:block {
@@ -2906,14 +2901,14 @@ video {
     padding-right: 2rem;
   }
 
-  .md\:py-24 {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-  }
-
   .md\:py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+  }
+
+  .md\:py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
   }
 
   .md\:pb-24 {
@@ -2936,12 +2931,12 @@ video {
     padding-left: 2.25rem;
   }
 
-  .md\:pt-64 {
-    padding-top: 16rem;
-  }
-
   .md\:pt-24 {
     padding-top: 6rem;
+  }
+
+  .md\:pt-64 {
+    padding-top: 16rem;
   }
 
   .md\:text-center {
@@ -3361,12 +3356,12 @@ video {
     --tw-gradient-from-position: 60%;
   }
 
-  .lg\:from-80\% {
-    --tw-gradient-from-position: 80%;
-  }
-
   .lg\:from-70\% {
     --tw-gradient-from-position: 70%;
+  }
+
+  .lg\:from-80\% {
+    --tw-gradient-from-position: 80%;
   }
 
   .lg\:bg-cover {
