--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -1564,6 +1564,18 @@ video {
   max-width: none;
 }
 
+.max-w-\[205px\] {
+  max-width: 205px;
+}
+
+.max-w-0 {
+  max-width: 0px;
+}
+
+.max-w-\[25px\] {
+  max-width: 25px;
+}
+
 .border-collapse {
   border-collapse: collapse;
 }
@@ -1677,6 +1689,14 @@ video {
 
 .gap-\[5px\] {
   gap: 5px;
+}
+
+.gap-\[10px\] {
+  gap: 10px;
+}
+
+.gap-7 {
+  gap: 1.75rem;
 }
 
 .gap-x-2 {
@@ -2052,6 +2072,11 @@ video {
 .py-\[30px\] {
   padding-top: 30px;
   padding-bottom: 30px;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pb-10 {
@@ -2561,6 +2586,12 @@ video {
   opacity: 1;
 }
 
+@media (min-width: 640px) {
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
 @media (min-width: 768px) {
   .md\:absolute {
     position: absolute;
@@ -2669,6 +2700,10 @@ video {
 
   .md\:mt-\[410px\] {
     margin-top: 410px;
+  }
+
+  .md\:mt-7 {
+    margin-top: 1.75rem;
   }
 
   .md\:block {
@@ -2789,6 +2824,22 @@ video {
     max-width: 876px;
   }
 
+  .md\:max-w-\[286px\] {
+    max-width: 286px;
+  }
+
+  .md\:max-w-\[640px\] {
+    max-width: 640px;
+  }
+
+  .md\:max-w-\[650px\] {
+    max-width: 650px;
+  }
+
+  .md\:max-w-\[40px\] {
+    max-width: 40px;
+  }
+
   .md\:scale-100 {
     --tw-scale-x: 1;
     --tw-scale-y: 1;
@@ -2799,6 +2850,10 @@ video {
 
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -3206,6 +3261,10 @@ video {
     min-width: 3rem;
   }
 
+  .lg\:min-w-\[420px\] {
+    min-width: 420px;
+  }
+
   .lg\:max-w-64 {
     max-width: 16rem;
   }
@@ -3265,6 +3324,10 @@ video {
 
   .lg\:grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -3377,6 +3440,21 @@ video {
     padding-right: 120px;
   }
 
+  .lg\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .lg\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .lg\:py-12 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
   .lg\:pb-14 {
     padding-bottom: 3.5rem;
   }
@@ -3403,6 +3481,10 @@ video {
 
   .lg\:pt-\[100px\] {
     padding-top: 100px;
+  }
+
+  .lg\:pb-24 {
+    padding-bottom: 6rem;
   }
 
   .lg\:text-left {
@@ -3466,5 +3548,9 @@ video {
 @media (min-width: 1280px) {
   .xl\:hidden {
     display: none;
+  }
+
+  .xl\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
