--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -1937,6 +1937,18 @@ video {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
+.bg-\[url\(\'\.\.\/img\/about\/slide-bgd-2\.jpg\'\)\] {
+  background-image: url('../img/about/slide-bgd-2.jpg');
+}
+
+.bg-\[url\(\'\.\.\/img\/about\/changy-bgd\.png\'\)\] {
+  background-image: url('../img/about/changy-bgd.png');
+}
+
+.bg-\[url\(\'\.\.\/img\/about\/bgd-sec-changy\.jpg\'\)\] {
+  background-image: url('../img/about/bgd-sec-changy.jpg');
+}
+
 .from-blue-500 {
   --tw-gradient-from: #0A4A7F var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(10 74 127 / 0) var(--tw-gradient-to-position);
